# DumbResearch

./: README.md  pyproject.toml  test.py
Assignment/: ~$ursework-Appendix A-List of ERTs .docx
HumanAI-master/: Main.py  excel_graph_plotter.py  json_to_excel_converter.py  pyproject.toml
HumanAI-master/collected_data/: Academic1.json  Academic2.json  Academic3.json  Academic3.xlsx  NonAcademic1.xlsx  NonAcademic2.json  NonAcademic2.xlsx  NonAcademic3.json
myResearch/: main.py  parser.py  plots.py  transcribe.py  transcriber.py
myResearch/data/ERT_output/: academic1.json  academic2.json  academic3.json  nonAcademic1.json  nonAcademic2.json  nonAcademic3.json
myResearch/data/processedData/audio/: academic1.csv  academic2.csv  academic3.csv  nonAcademic1.csv  nonAcademic2.csv  nonAcademic3.csv
myResearch/data/processedData/hume/: academic1.csv  academic1.xlsx  academic2.csv  academic2.xlsx  academic3.csv  academic3.xlsx  nonAcademic1.csv  nonAcademic1.xlsx  nonAcademic2.csv  nonAcademic2.xlsx  nonAcademic3.csv  nonAcademic3.xlsx
myResearch/final_data/: LLMA Interaction Trust Scale.docx  academic1.xlsx  academic2.xlsx  academic3.xlsx  nonAcademic1.xlsx  nonAcademic2.xlsx  nonAcademic3.xlsx
otherData/Assignment/: Coursework-Appendix A-List of ERTs .docx
otherData/Lecture notes/: YR23-24-Topic 12 Prototyping.pptx
someonesResearch/: excel_graph_plotter.py  json_to_excel_converter.py
someonesResearch/collected_data/: Academic1.xlsx  Academic2.xlsx  NonAcademic1.json  NonAcademic3.xlsx
