[tool.poetry]
name = "dumbresearch"
version = "0.1.0"
description = ""
authors = ["ShapovalovIlia <ilia-shapvalov04@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
hume = "^0.7.5"
requests = "^2.32.3"
ruff = "^0.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
