[tool.poetry]
name = "humanai-master"
version = "0.1.0"
description = ""
authors = ["ShapovalovIlia <ilia-shapvalov04@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
matplotlib = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
